--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
     <div class="container">
         <!-- Left sidebar -->
         <aside class="sidebar left">
-            <label><input type="radio" name="operation" value="add" checked> <span class="op-symbol">+</span></label>
-            <label><input type="radio" name="operation" value="subtract"> <span class="op-symbol">−</span></label>
-            <label><input type="radio" name="operation" value="multiply"> <span class="op-symbol">×</span></label>
-            <label><input type="radio" name="operation" value="divide"> <span class="op-symbol">÷</span></label>
+            <!-- Grade selection -->
+            <div class="sidebar-title">Grade</div>
+            <label class="radio-label"><input type="radio" name="grade" value="1" checked> 1</label>
+            <label class="radio-label"><input type="radio" name="grade" value="2"> 2</label>
+            <label class="radio-label"><input type="radio" name="grade" value="3"> 3</label>
+
+            <div class="sidebar-divider"></div>
+
+            <!-- Operation symbols -->
+            <div class="sidebar-title">Math</div>
+            <label class="radio-label"><input type="radio" name="operation" value="add" checked> <span class="op-symbol">+</span></label>
+            <label class="radio-label"><input type="radio" name="operation" value="subtract"> <span class="op-symbol">−</span></label>
+            <label class="radio-label multiply-label"><input type="radio" name="operation" value="multiply"> <span class="op-symbol">×</span></label>
+            <label class="radio-label divide-label"><input type="radio" name="operation" value="divide"> <span class="op-symbol">÷</span></label>
         </aside>
 
         <!-- Main content -->
         <main class="main-content">
-            <div id="main-title" class="main-title"></div>
+            <div id="main-title" class="main-title">Math for Kids</div>
             <div id="feedback" class="feedback"></div>
             <div class="question-box">
                 <span id="question">?</span>
