grade 1 2 3 task logic added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- Main content -->
         <main class="main-content">
-            <div id="main-title" class="main-title">Math for Kids</div>
+            <div id="main-title" class="main-title">Answer for a Prize</div>
             <div id="feedback" class="feedback"></div>
             <div class="question-box">
                 <span id="question">?</span>
