Languages added RU UA DE

--- a/index.html
+++ b/index.html
@@ -27,14 +27,25 @@
             <label class="radio-label"><input type="radio" name="operation" value="subtract"> <span class="op-symbol">−</span></label>
             <label class="radio-label multiply-label"><input type="radio" name="operation" value="multiply"> <span class="op-symbol">×</span></label>
             <label class="radio-label divide-label"><input type="radio" name="operation" value="divide"> <span class="op-symbol">÷</span></label>
+
+            <div class="sidebar-divider"></div>
+
+            <!-- Language -->
+            <div class="lang-switch">
+                <button onclick="setLanguage('en')">EN</button>
+                <button onclick="setLanguage('ru')">RU</button>
+                <button onclick="setLanguage('uk')">UA</button>
+                <button onclick="setLanguage('de')">DE</button>
+            </div>
+
         </aside>
 
         <!-- Main content -->
         <main class="main-content">
             <div id="main-title" class="main-title">Answer for a Prize</div>
-            <div id="feedback" class="feedback"></div>
             <div class="question-box">
                 <span id="question">?</span>
+                <span id="feedback" class="feedback"></span>
             </div>
             <!-- Rewards container -->
             <div id="rewards" class="rewards"></div>
@@ -47,9 +58,9 @@
                 <button id="checkBtn">Submit</button>
                 <!-- Counters -->
                 <div id="counters" class="counters">
-                    <p>Total: <span id="total">0</span></p>
-                    <p>Correct: <span id="correct">0</span></p>
-                    <p>Wrong: <span id="wrong">0</span></p>
+                    <p>∑ <span id="total">0</span></p>
+                    <p><span style="color:green;">✔</span> <span id="correct">0</span></p>
+                    <p><span style="color:red;">✖</span> <span id="wrong">0</span></p>
                 </div>
             </div>
 
