colors for mobile fixed, translation fixed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <div id="main-title" class="main-title">Answer for a Prize</div>
             <div class="question-box">
                 <span id="question">?</span>
-                <span id="feedback" class="feedback"></span>
             </div>
             <!-- Rewards container -->
             <div id="rewards" class="rewards"></div>
@@ -58,9 +57,10 @@
                 <button id="checkBtn">Submit</button>
                 <!-- Counters -->
                 <div id="counters" class="counters">
-                    <p>∑ <span id="total">0</span></p>
-                    <p><span style="color:green;">✔</span> <span id="correct">0</span></p>
-                    <p><span style="color:red;">✖</span> <span id="wrong">0</span></p>
+                    <p><span class="icon total">∑</span> <span id="total">0</span></p>
+                    <p><span class="icon correct">✔</span> <span id="correct">0</span></p>
+                    <p><span class="icon wrong">✘</span> <span id="wrong">0</span></p>
+                    <span id="feedback" class="feedback"></span>
                 </div>
             </div>
 
