counter color fixed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Counters -->
                 <div id="counters" class="counters">
                     <p><span class="icon total">∑</span> <span id="total">0</span></p>
-                    <p><span class="icon correct">✔</span> <span id="correct">0</span></p>
+                    <p><span class="icon correct">✓</span> <span id="correct">0</span></p>
                     <p><span class="icon wrong">✘</span> <span id="wrong">0</span></p>
                     <span id="feedback" class="feedback"></span>
                 </div>
